Issue 6585048: Centralize truncation CSS

--- a/www/triples/css/triples.less
+++ b/www/triples/css/triples.less
@@ -195,23 +195,6 @@ tr.invalid:hover td {
   color: #999;
 }
 
-.truncate {
-  display: block;
-  overflow:hidden;
-  text-overflow: ellipsis;
-  max-width: 20em;
-}
-
-th:hover .truncate,
-td:hover .truncate {
-  position: absolute;
-  max-width: 1000px;
-  z-index: 10;
-  background: #f8f8f8;
-  .rounded_corners();
-  -webkit-box-shadow: 0 0 4px #999;
-}
-
 .wrapper {
   display: inline-block;
   position: relative;
